# mart-common

./: .clang-format  .codecov.yml  .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  ArrayView.h  CMakeLists.txt  CMakeSettings.json  ConstString.h  CopyableAtomic.h  LICENSE.md  MartLog.h  MartTime.h  PrintWrappers.h  README.md  StringView.h  algorithm.h  random.h  ranges.h  utils.h
cmake/: install_targets.cmake  mart_install_targets.cmake
cpp_std/: README.md  tuple.h  type_traits.h  utility.h
examples/: CMakeLists.txt  doc_example1.cpp  doc_example2.cpp  main.cpp
examples/nw/: CMakeLists.txt  main.cpp  send_status_vals.cpp  simple_udp_sender.cpp  udp_server.cpp  write_udp_msg_to_file.cpp
experimental/: ArrayView.h  ArrayViewAdaptor.h  ConstStr.h  ConstString.h  MartVec.h  Optional.h  StringView.h  out_param.h
experimental/mt/: Channel.h  DevTools.h
experimental/network/: NativeSocketWrapper.h  Socket.h  basic_types.h  ip.h  port_layer.h  tcp.h  udp.h
im_str/: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
im_str/examples/: CMakeLists.txt  main.cpp
im_str/include/im_str/: im_str.hpp
im_str/include/im_str/detail/: config.hpp  dynamic_array.hpp  ref_cnt_buf.hpp  string_view_mixin.hpp
im_str/tests/: CMakeLists.txt  benchmark_split.cpp  include_catch.hpp  main.cpp  test_alloc.cpp  test_dynamic_array.cpp  test_ref_cnt_buf.cpp  test_split.cpp  test_substr.cpp  test_swap.cpp
include/im_str/: im_str.hpp
include/im_str/detail/: config.hpp  dynamic_array.hpp  ref_cnt_buf.hpp  string_view_mixin.hpp
include/mart-common/: ArrayView.h  ArrayViewAdaptor.h  ConstString.h  MartLog.h  MartTime.h  MartVec.h  PrintWrappers.h  StringView.h  StringViewOstream.h  TypePunningUnion.h  TypePunningVariant.h  algorithm.h  exceptions.h  math.h  port_layer.h  random.h  ranges.h  utils.h
include/mart-common/algorithms/: OutputRange.h  find.h  mod-sequence-ops.h  non-mod-sequence-ops.h  numeric.h  set_ops.h  sorting.h
include/mart-common/cpp_std/: README.md  array.h  execution.h  memory.h  tuple.h  type_traits.h  utility.h
include/mart-common/enum/: EnumDefinitionMacro.h  EnumHelpers.h  EnumIdxArray.h
include/mart-common/experimental/: ArrayView.h  ArrayViewAdaptor.h  ConstString.h  CopyableAtomic.h  DevTools.h  DynArray.h  DynLimArray.h  MartVec.h  Optional.h  RefCntPtr.h  StoragePool.h  StringView.h  circular_buffer.h  link.h  out_param.h  ranges.h  tmp.h
include/mart-common/experimental/lin_alg/: matrix.h
include/mart-common/experimental/mt/: Channel.h  FastMutex.h  Thread.h  TrippleBuffer.h  UnblockException.h
include/mart-common/experimental/net/: CMakeLists.txt  Socket.cpp  Socket.hpp  basic_types.hpp  ip.cpp  ip.hpp  network_exceptions.hpp  port_layer.cpp  port_layer.hpp  udp.cpp  udp.hpp
include/mart-common/experimental/network/: MultiTypeBuffer.h  Socket.h  basic_types.h  exceptions.h  ip.h  networking.h  port_layer.h  tcp.h  udp.h
include/mart-common/logging/: ILogSink.h  Logger.h  LoggerConfig.h  MartLogFWD.h  SinkConfigs.h  Sinks.h  default_formatter.h  types.h
include/mart-common/mt/: TrippleBuffer.h
include/mart-netlib/: RaiiSocket.hpp  Socket.hpp  basic_types.hpp  ip.hpp  network_exceptions.hpp  port_layer.hpp  tcp.hpp  udp.hpp  unix.hpp
include/mart-netlib/detail/: dgram_socket_base.hpp  ip_detail.hpp  socket_base.hpp
logging/: ILogSink.h  Logger.h  MartLogFWD.h  default_formatter.h  types.h
src/mart-netlib/: CMakeLists.txt  ip.cpp  port_layer.cpp  udp.cpp  unix.cpp
src/mart-netlib/detail/: dgram_socket_base_impl.hpp  socket_base.cpp
tests/: CMakeLists.txt  benchmark_split.cpp  test_alloc.cpp  test_dynamic_array.cpp  test_ref_cnt_buf.cpp  test_split.cpp  test_substr.cpp  tests.cpp
tests/libs/: CodeCoverage.cmake
tests/libs/catch2/: catch.hpp
tests/src/: tests_ArrayView.cpp  tests_ArrayViewAdaptor.cpp  tests_ConstString.cpp  tests_MartTime.cpp  tests_PrintWrappers.cpp  tests_StringView.cpp  tests_StringViewOstream.cpp  tests_TypePunningUnion.cpp  tests_TypePunningVariant.cpp  tests_math.cpp  tests_random.cpp  tests_ranges.cpp  tests_utils.cpp
tests/src/algorithm/: test_sort.cpp  testranges.h  tests_find.cpp  tests_generate.cpp  tests_mod-sequence-ops.cpp  tests_non-mod-sequence-ops.cpp  tests_set_ops.cpp  tests_sort.cpp
tests/src/enum/: tests_EnumDefinitionMacro.cpp  tests_EnumIdxArray.cpp
tests/src/experimental/: tests_CopyableAtomic.cpp  tests_DevTools.cpp  tests_DynArray.cpp  tests_DynLimArray.cpp  tests_Optional.cpp  tests_RefCntPtr.cpp  tests_StoragePool.cpp  tests_circular_buffer.cpp  tests_link.cpp  tests_out_param.cpp  tests_ranges.cpp  tests_tmp.cpp
tests/src/experimental/lin_alg/: tests_matrix.cpp
tests/src/experimental/mt/: tests_Channel.cpp  tests_FastMutex.cpp  tests_Thread.cpp  tests_TrippleBuffer.cpp  tests_UnblockException.cpp
tests/src/experimental/net/: tests_basic_types.cpp  tests_ip.cpp  tests_port_layer.cpp  tests_socket.cpp  tests_udp.cpp
tests/src/experimental/network/: tests_basic_types.cpp  tests_ip.cpp  tests_networking.cpp  tests_port_layer.cpp  tests_socket.cpp  tests_tcp.cpp  tests_udp.cpp
tests/src/log/: tests_ILogSingk.cpp  tests_LoggerConfig.cpp  tests_MartLog.cpp  tests_MartLogFWD.cpp  tests_default_formatter.cpp  tests_types.cpp
tests/src/mt/: tests_TrippleBuffer.cpp
tests/src/netlib/: CMakeLists.txt  tests_basic_types.cpp  tests_ip.cpp  tests_port_layer.cpp  tests_raiisocket.cpp  tests_socket.cpp  tests_tcp.cpp  tests_udp.cpp  tests_unix.cpp
tests/src/netlib/detail/: tests_ip_detail.cpp
tests/src/vec/: tests_MartVec.cpp
